# trezor-pkcs11-shim

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  test_integration.py
.github/workflows/: release.yml
pkg/: 51-trezor.rules  postinst  postrm  trezor-pkcs11.conf.example
src/: config.rs  lib.rs  pkcs11_types.rs  trezor.rs
wix/: main.wxs
